# dxsurrealdb

./: Cargo.toml  Dioxus.toml
src/: main.rs
