[package]
name = "dxsurrealdb"
version = "0.1.0"
authors = ["DioxusGrow <dioxusgrow@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "3326e6b", features = ["router"] }
serde = { version = "1.0.215", features = ["derive"] }
surrealdb = "2.1.2"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
